manifests/applications/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: applications
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
